--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Lato, sans-serif;
   color: hsl(150deg, 100%, 98%);
   scroll-behavior: smooth;
+  scroll-padding: 7vh;
 }
 
 body {
@@ -65,10 +66,9 @@ nav a {
 
 #main-image {
   display: flex;
-  margin-bottom: 15vh;
   position: relative;
   height: 60vh;
-  width: 100vw;
+  width: 100%;
 }
 #main-image > img {
   width: 100vw;
@@ -94,12 +94,13 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 #main {
   height: inherit;
+  margin-top: 15vh;
 }
 
 main {
@@ -191,6 +192,7 @@ main {
 
 .content-box {
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
   justify-content: space-evenly;
   flex: 1 1 30%;
