--- a/style.scss
+++ b/style.scss
@@ -50,7 +50,7 @@ nav {
   z-index: 1;
   div {
     color: inherit;
-    font-size: 16px;
+    font-size: 1rem;
     margin-left: 5vw;
   }
   ul {
@@ -70,7 +70,6 @@ nav {
 //  main image
 #main-image {
   display: flex;
-  //margin-bottom: 15vh;
   position: relative;
   height: 60vh;
   width: 100%;
@@ -154,6 +153,7 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     padding: 1rem 0;
+    align-self: center;
     li {
       flex: 1 1 110px;
       text-align: center;
