--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav {
 }
 nav div {
   color: inherit;
-  font-size: 16px;
+  font-size: 1rem;
   margin-left: 5vw;
 }
 nav ul {
@@ -147,6 +147,7 @@ main {
   justify-content: center;
   flex-wrap: wrap;
   padding: 1rem 0;
+  align-self: center;
 }
 #skills ul li {
   flex: 1 1 110px;
