--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a:hover {
 }
 
 nav {
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   display: flex;
@@ -54,6 +54,7 @@ nav ul {
   display: flex;
   justify-content: center;
   align-content: center;
+  margin-right: 6vw;
 }
 nav ul li {
   margin-right: 4vw;
@@ -61,6 +62,9 @@ nav ul li {
 nav a {
   color: inherit;
   padding: 10px;
+}
+nav .main-link {
+  margin-left: 10vw;
 }
 
 .toggle-button {
@@ -89,6 +93,7 @@ nav a {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
+    padding: 0.25rem;
   }
   nav ul {
     display: none;
