--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ a {
 }
 //  navigation bar
 nav {
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   display: flex;
@@ -57,6 +57,7 @@ nav {
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-right: 6vw;
     li {
       margin-right: 4vw;
     }
@@ -64,6 +65,9 @@ nav {
   a {
     color: inherit;
     padding: 10px;
+  }
+  .main-link {
+    margin-left: 10vw;
   }
 }
 
@@ -92,6 +96,7 @@ nav {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
+    padding: 0.25rem;
     ul {
       display: none;
       width: 100%;
