--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@ nav {
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-right: 6vw;
+    margin-right: 11vw;
     li {
       margin-right: 4vw;
     }
@@ -67,7 +67,7 @@ nav {
     padding: 10px;
   }
   .main-link {
-    margin-left: 10vw;
+    margin-left: 15vw;
   }
 }
 
@@ -114,7 +114,7 @@ nav {
 #main-image {
   display: flex;
   position: relative;
-  height: 60vh;
+  height: 70vh;
   width: 100%;
   > img {
     width: 100vw;
@@ -151,7 +151,7 @@ nav {
 main {
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  width: 70vw;
   height: inherit;
   margin-bottom: 7vh;
   justify-content: flex-start;
@@ -207,32 +207,6 @@ main {
   }
 }
 
-//websites
-
-#website {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
-  gap: 1rem;
-
-  margin-bottom: 7vh;
-  > h1 {
-    font-size: 40px;
-  }
-}
-#flex {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
-  gap: 1.5rem;
-  .content-box {
-    flex: 1 1;
-  }
-}
-
-//
 #content-about {
   display: flex;
   flex-wrap: wrap;
@@ -248,12 +222,31 @@ main {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  gap: 1.75rem;
   flex: 1 1 30%;
   border-radius: 2.5rem;
   background-color: $background-color-secondary;
   padding: 2.5rem;
+  font-size: 16px;
   overflow-wrap: break-word;
+}
+
+.list-of-skills {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1rem 0;
+  align-self: center;
+  li {
+    flex: 1;
+    text-align: center;
+    padding: 1rem;
+    border-radius: 2rem;
+    background-color: rgba(29, 14, 116, 0.541);
+  }
 }
 
 //footer
